--- a/cog.yaml
+++ b/cog.yaml
@@ -22,7 +22,7 @@ build:
 
   # commands run after the environment is setup
   run:
-    # - "echo 'DeepSeek-OCR environment ready!'"
+    - curl -o /usr/local/bin/pget -L "https://github.com/replicate/pget/releases/download/v0.11.0/pget_linux_x86_64" && chmod +x /usr/local/bin/pget
 
 # predict.py defines how predictions are run on your model
 predict: "predict.py:Predictor"
